--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -32,6 +32,8 @@
         <hibernate-validator.version>6.0.13.Final</hibernate-validator.version>
         <apache.httpcomponents.version>4.5.6</apache.httpcomponents.version>
         <commons-lang3.version>3.11</commons-lang3.version>
+        <apache.commons.collections4.version>4.4</apache.commons.collections4.version>
+        <apache.commons.io.version>2.8.0</apache.commons.io.version>
     </properties>
 
     <dependencyManagement>
@@ -168,6 +170,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-collections4</artifactId>
+                <version>${apache.commons.collections4.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${apache.commons.io.version}</version>
             </dependency>
 
         </dependencies>
