--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>pigeon-dependencies</module>
         <module>pigeon-core</module>
         <module>pigeon-security</module>
+        <module>pigeon-knife4j</module>
     </modules>
 
     <properties>
