--- a/pigeon-security/pom.xml
+++ b/pigeon-security/pom.xml
@@ -22,6 +22,11 @@
             <version>1.0.0</version>
         </dependency>
         <dependency>
+            <groupId>cn.yiidii.pigeon</groupId>
+            <artifactId>pigeon-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
