--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -34,6 +34,7 @@
         <commons-lang3.version>3.11</commons-lang3.version>
         <apache.commons.collections4.version>4.4</apache.commons.collections4.version>
         <apache.commons.io.version>2.8.0</apache.commons.io.version>
+        <JustAuth.version>1.15.9</JustAuth.version>
     </properties>
 
     <dependencyManagement>
@@ -180,6 +181,11 @@
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${apache.commons.io.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>me.zhyd.oauth</groupId>
+                <artifactId>JustAuth</artifactId>
+                <version>${JustAuth.version}</version>
             </dependency>
 
         </dependencies>
