--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -35,6 +35,7 @@
         <apache.commons.collections4.version>4.4</apache.commons.collections4.version>
         <apache.commons.io.version>2.8.0</apache.commons.io.version>
         <JustAuth.version>1.15.9</JustAuth.version>
+        <seata.version>1.4.0</seata.version>
     </properties>
 
     <dependencyManagement>
@@ -187,7 +188,17 @@
                 <artifactId>JustAuth</artifactId>
                 <version>${JustAuth.version}</version>
             </dependency>
-
+            <!-- seata -->
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-spring-boot-starter</artifactId>
+                <version>${seata.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.seata</groupId>
+                <artifactId>seata-all</artifactId>
+                <version>${seata.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
