--- a/pigeon-core/pom.xml
+++ b/pigeon-core/pom.xml
@@ -68,6 +68,15 @@
             <artifactId>httpclient</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.dozermapper</groupId>
+            <artifactId>dozer-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.dozermapper</groupId>
+            <artifactId>dozer-spring4</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
