初始化rabbitMq模块

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>pigeon-core</module>
         <module>pigeon-security</module>
         <module>pigeon-knife4j</module>
+        <module>pigeon-rabbit</module>
     </modules>
 
     <properties>
