--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -35,6 +35,7 @@
         <apache.commons.collections4.version>4.4</apache.commons.collections4.version>
         <apache.commons.io.version>2.8.0</apache.commons.io.version>
         <JustAuth.version>1.15.9</JustAuth.version>
+        <justauth.springboot.version>1.3.3</justauth.springboot.version>
         <seata.version>1.4.1</seata.version>
         <dozer.version>6.5.0</dozer.version>
     </properties>
@@ -188,6 +189,11 @@
                 <groupId>me.zhyd.oauth</groupId>
                 <artifactId>JustAuth</artifactId>
                 <version>${JustAuth.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.xkcoding.justauth</groupId>
+                <artifactId>justauth-spring-boot-starter</artifactId>
+                <version>${justauth.springboot.version}</version>
             </dependency>
             <!-- seata -->
             <dependency>
