系统日志入库

--- a/pigeon-log/pom.xml
+++ b/pigeon-log/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>pigeon-core</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.yiidii.pigeon</groupId>
+            <artifactId>rbac-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
