--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -38,6 +38,7 @@
         <justauth.springboot.version>1.3.3</justauth.springboot.version>
         <seata.version>1.4.1</seata.version>
         <dozer.version>6.5.0</dozer.version>
+        <transmittable.version>2.12.1</transmittable.version>
     </properties>
 
     <dependencyManagement>
@@ -216,6 +217,11 @@
                 <groupId>com.github.dozermapper</groupId>
                 <artifactId>dozer-spring4</artifactId>
                 <version>${dozer.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>transmittable-thread-local</artifactId>
+                <version>${transmittable.version}</version>
             </dependency>
 
         </dependencies>
