--- a/pigeon-core/pom.xml
+++ b/pigeon-core/pom.xml
@@ -76,6 +76,10 @@
             <groupId>com.github.dozermapper</groupId>
             <artifactId>dozer-spring4</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
 
     </dependencies>
 
