--- a/pigeon-feign/pom.xml
+++ b/pigeon-feign/pom.xml
@@ -32,6 +32,10 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-okhttp</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
