阿里云日志

--- a/pigeon-core/pom.xml
+++ b/pigeon-core/pom.xml
@@ -80,7 +80,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>transmittable-thread-local</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>aliyun-log-logback-appender</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
