--- a/pigeon-starter-feign/pom.xml
+++ b/pigeon-starter-feign/pom.xml
@@ -8,38 +8,36 @@
         <groupId>cn.yiidii.pigeon</groupId>
         <version>1.0.0</version>
     </parent>
-    <groupId>cn.yiidii.pigeon</groupId>
-    <artifactId>pigeon-mail</artifactId>
-    <version>1.0.0</version>
+    <artifactId>pigeon-starter-feign</artifactId>
+    <name>${project.artifactId}</name>
 
     <properties>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <groupId>cn.yiidii.pigeon</groupId>
+            <artifactId>pigeon-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
-            <scope>compile</scope>
-        </dependency>
-        <!-- Spring Boot 邮件依赖 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-        </dependency>
-        <!--freemarker 页面静态化-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-freemarker</artifactId>
+            <artifactId>spring-boot-actuator-autoconfigure</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
         </dependency>
     </dependencies>
 
+    <build>
+    </build>
 </project>
