--- a/pigeon-starter-log/pom.xml
+++ b/pigeon-starter-log/pom.xml
@@ -8,8 +8,8 @@
         <groupId>cn.yiidii.pigeon</groupId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>pigeon-security</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>pigeon-starter-log</artifactId>
+    <name>${project.artifactId}</name>
 
     <properties>
     </properties>
@@ -17,25 +17,23 @@
     <dependencies>
         <dependency>
             <groupId>cn.yiidii.pigeon</groupId>
-            <artifactId>rbac-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.yiidii.pigeon</groupId>
             <artifactId>pigeon-core</artifactId>
             <version>1.0.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <groupId>cn.yiidii.pigeon</groupId>
+            <artifactId>rbac-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-security</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 
