--- a/pigeon-starter-mail/pom.xml
+++ b/pigeon-starter-mail/pom.xml
@@ -8,17 +8,14 @@
         <groupId>cn.yiidii.pigeon</groupId>
         <version>1.0.0</version>
     </parent>
-
-    <artifactId>pigeon-knife4j</artifactId>
+    <groupId>cn.yiidii.pigeon</groupId>
+    <artifactId>pigeon-starter-mail</artifactId>
+    <version>1.0.0</version>
 
     <properties>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
@@ -28,6 +25,20 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
             <scope>compile</scope>
+        </dependency>
+        <!-- Spring Boot 邮件依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <!--freemarker 页面静态化-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-freemarker</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
     </dependencies>
 
