--- a/pigeon-starter-rabbit/pom.xml
+++ b/pigeon-starter-rabbit/pom.xml
@@ -8,32 +8,21 @@
         <groupId>cn.yiidii.pigeon</groupId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>pigeon-log</artifactId>
-    <name>${project.artifactId}</name>
+    <artifactId>pigeon-starter-rabbit</artifactId>
+    <version>1.0.0</version>
 
     <properties>
     </properties>
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.yiidii.pigeon</groupId>
             <artifactId>pigeon-core</artifactId>
             <version>1.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>cn.yiidii.pigeon</groupId>
-            <artifactId>rbac-api</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 
