--- a/pigeon-starter-security/pom.xml
+++ b/pigeon-starter-security/pom.xml
@@ -8,20 +8,34 @@
         <groupId>cn.yiidii.pigeon</groupId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>pigeon-kafka</artifactId>
-    <name>${project.artifactId}</name>
+    <artifactId>pigeon-starter-security</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-stream</artifactId>
+            <groupId>cn.yiidii.pigeon</groupId>
+            <artifactId>rbac-api</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.yiidii.pigeon</groupId>
+            <artifactId>pigeon-core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
     </dependencies>
 
