Redis移出core, 单独的resdis模块，及测试

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>pigeon-starter-kafka</module>
         <module>pigeon-starter-log</module>
         <module>pigeon-starter-feign</module>
+        <module>pigeon-starter-redis</module>
     </modules>
 
     <properties>
