--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -40,6 +40,7 @@
         <dozer.version>6.5.0</dozer.version>
         <transmittable.version>2.12.1</transmittable.version>
         <aliyun-log-logback-appender.version>0.1.18</aliyun-log-logback-appender.version>
+        <redisson.starter.version>3.10.6</redisson.starter.version>
     </properties>
 
     <dependencyManagement>
@@ -229,6 +230,12 @@
                 <groupId>com.aliyun.openservices</groupId>
                 <artifactId>aliyun-log-logback-appender</artifactId>
                 <version>${aliyun-log-logback-appender.version}</version>
+            </dependency>
+            <!-- redisson starter-->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>${redisson.starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
