--- a/pigeon-starter-redis/pom.xml
+++ b/pigeon-starter-redis/pom.xml
@@ -33,5 +33,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
