--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>pigeon-starter-log</module>
         <module>pigeon-starter-feign</module>
         <module>pigeon-starter-redis</module>
+        <module>pigeon-starter-idempotent</module>
     </modules>
 
     <properties>
