--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -42,6 +42,7 @@
         <aliyun-log-logback-appender.version>0.1.18</aliyun-log-logback-appender.version>
         <redisson.starter.version>3.10.6</redisson.starter.version>
         <dynamic-datasource.version>3.3.2</dynamic-datasource.version>
+        <spring-boot-admin.version>2.4.1</spring-boot-admin.version>
     </properties>
 
     <dependencyManagement>
@@ -238,13 +239,28 @@
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>${redisson.starter.version}</version>
             </dependency>
-
+            <!-- baomidou dynamic-datasource -->
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
                 <version>${dynamic-datasource.version}</version>
             </dependency>
-
+            <!-- spring-boot-admin -->
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>${spring-boot-admin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-server-ui</artifactId>
+                <version>${spring-boot-admin.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-client</artifactId>
+                <version>${spring-boot-admin.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
