--- a/pigeon-starter-datasource/pom.xml
+++ b/pigeon-starter-datasource/pom.xml
@@ -28,6 +28,10 @@
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
 
     </dependencies>
 
