--- a/pigeon-starter-strategy/pom.xml
+++ b/pigeon-starter-strategy/pom.xml
@@ -29,6 +29,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-beans</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
