--- a/pigeon-dependencies/pom.xml
+++ b/pigeon-dependencies/pom.xml
@@ -39,7 +39,7 @@
         <seata.version>1.4.1</seata.version>
         <dozer.version>6.5.0</dozer.version>
         <transmittable.version>2.12.1</transmittable.version>
-        <aliyun-log-logback-appender.version>0.1.18</aliyun-log-logback-appender.version>
+<!--        <aliyun-log-logback-appender.version>0.1.18</aliyun-log-logback-appender.version>-->
         <redisson.starter.version>3.10.6</redisson.starter.version>
         <dynamic-datasource.version>3.3.2</dynamic-datasource.version>
         <spring-boot-admin.version>2.3.1</spring-boot-admin.version>
@@ -231,11 +231,11 @@
                 <version>${transmittable.version}</version>
             </dependency>
             <!-- 阿里云日志appender -->
-            <dependency>
-                <groupId>com.aliyun.openservices</groupId>
-                <artifactId>aliyun-log-logback-appender</artifactId>
-                <version>${aliyun-log-logback-appender.version}</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.aliyun.openservices</groupId>-->
+<!--                <artifactId>aliyun-log-logback-appender</artifactId>-->
+<!--                <version>${aliyun-log-logback-appender.version}</version>-->
+<!--            </dependency>-->
             <!-- redisson -->
             <dependency>
                 <groupId>org.redisson</groupId>
