--- a/pigeon-starter-datasource/pom.xml
+++ b/pigeon-starter-datasource/pom.xml
@@ -32,7 +32,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
