--- a/pigeon-starter-mybatis/pom.xml
+++ b/pigeon-starter-mybatis/pom.xml
@@ -10,4 +10,14 @@
     </parent>
     <artifactId>pigeon-starter-mybatis</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
